TLD is loaded from URi jar-file

--- a/build.xml
+++ b/build.xml
@@ -62,11 +62,18 @@
 				<include name="com/escenic/plugin/*" />
 			</fileset>
 		</jar>
+		<delete dir="tmp"/>
+
+		<mkdir dir="tmp/META_INF" />
+		<copyfile dest="tmp/META-INF/escenic-authenticator.tld" src="resources/escenic-authenticator.tld" />
 		<delete failonerror="false" file="dist/${publication-jar.file}" />
 		<jar jarfile="dist/${publication-jar.file}">
 			<fileset dir="build">
 				<include name="talentum/escenic/plugins/authenticator/struts/*" />
 				<include name="talentum/escenic/plugins/authenticator/taglib/*" />
+			</fileset>
+			<fileset dir="tmp">
+				<include name="META-INF/*" />
 			</fileset>
 		</jar>
 		<delete dir="tmp"/>
