cookie config extracted to properties file

--- a/siteconfig/talentum/agreements/AFVAgreement.properties
+++ b/siteconfig/talentum/agreements/AFVAgreement.properties
@@ -1,8 +1,10 @@
 $class=talentum.escenic.plugins.authenticator.agreements.AFVAgreement
 
-loginURL=/loginform/
+loginURL=/administration/users/loginform/
 
-allowedRoles=T,N
+unauthorizedURL=/administration/users/unauthorized/
+
+allowPublishedRole=T
 
 # Which weekday is the magazine published. 1-7, 1=Sunday, 7=Saturday
-edtionPublishingWeekday=4
+allowPublishedBeforeWeekday=4
