--- a/siteconfig/talentum/escenic/plugins/authenticator/AuthenticatorManager.properties
+++ b/siteconfig/talentum/escenic/plugins/authenticator/AuthenticatorManager.properties
@@ -1,3 +1,7 @@
 $class=talentum.escenic.plugins.authenticator.AuthenticatorManager
 
 authenticator=./Authenticator
+
+cookieName=pressdata_user
+
+#cookieDomain=affarsvarlden.se
