--- a/.classpath
+++ b/.classpath
@@ -18,5 +18,7 @@
 	<classpathentry kind="lib" path="buildjars/jsp-api.jar"/>
 	<classpathentry kind="lib" path="webapps/demo/WEB-INF/lib/jstl-1.1.2.jar"/>
 	<classpathentry kind="lib" path="webapps/demo/WEB-INF/lib/standard-1.1.2.jar"/>
+	<classpathentry kind="lib" path="/opt/tomcat/common/lib/log4j.jar"/>
+	<classpathentry kind="lib" path="/escenic-src/lib/escenic-servlet.jar"/>
 	<classpathentry kind="output" path="build"/>
 </classpath>
