Refactored verified user to use exception handling Changed agreement url properties to use a Map

--- a/siteconfig/talentum/agreements/AFVAgreement.properties
+++ b/siteconfig/talentum/agreements/AFVAgreement.properties
@@ -1,8 +1,8 @@
 $class=talentum.escenic.plugins.authenticator.agreements.AFVAgreement
 
-loginURL=/administration/users/loginform/
+url.loginform=/administration/users/loginform/
 
-unauthorizedURL=/administration/users/unauthorized/
+url.unauthorized=/administration/users/unauthorized/
 
 allowPublishedRole=T
 
