--- a/siteconfig/talentum/agreements/AFVAgreement.properties
+++ b/siteconfig/talentum/agreements/AFVAgreement.properties
@@ -4,7 +4,9 @@ url.loginform=/administration/users/loginform/
 
 url.unauthorized=/administration/users/unauthorized/
 
-allowPublishedRole=T
+url.rejected=/administration/users/rejected/
+
+allowPublishedRole=ece_tidningen
 
 # Which weekday is the magazine published. 1-7, 1=Sunday, 7=Saturday
 allowPublishedBeforeWeekday=4
