--- a/.classpath
+++ b/.classpath
@@ -20,5 +20,6 @@
 	<classpathentry kind="lib" path="webapps/demo/WEB-INF/lib/standard-1.1.2.jar"/>
 	<classpathentry kind="lib" path="/opt/tomcat/common/lib/log4j.jar"/>
 	<classpathentry kind="lib" path="/escenic-src/lib/escenic-servlet.jar"/>
+	<classpathentry kind="lib" path="buildjars/java_memcached-release_1.3.2.jar"/>
 	<classpathentry kind="output" path="build"/>
 </classpath>
