--- a/siteconfig/talentum/agreements/AFVAgreement.properties
+++ b/siteconfig/talentum/agreements/AFVAgreement.properties
@@ -6,6 +6,8 @@ url.unauthorized=/administration/users/unauthorized/
 
 url.rejected=/administration/users/rejected/
 
+url.passive=/administration/users/passive/
+
 allowPublishedRole=ece_tidningen
 
 # Which weekday is the magazine published. 1-7, 1=Sunday, 7=Saturday
