--- a/resources/web.xml
+++ b/resources/web.xml
@@ -4,6 +4,12 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
+	<!-- Authenticator filter -->
+	<filter>
+		<filter-name>AuthenticatorFilter</filter-name>
+		<filter-class>talentum.escenic.plugins.authenticator.filter.AuthenticatorFilter</filter-class>
+	</filter>
+
 
 
   <!-- Filter -->
@@ -90,6 +96,13 @@
       <param-value>64</param-value>
     </init-param>
   </filter>
+
+
+	<!-- Authenticator filter -->
+	<filter-mapping>
+		<filter-name>AuthenticatorFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
 
   <filter-mapping>
