--- a/siteconfig/talentum/escenic/plugins/authenticator/AuthenticatorManager.properties
+++ b/siteconfig/talentum/escenic/plugins/authenticator/AuthenticatorManager.properties
@@ -2,6 +2,8 @@ $class=talentum.escenic.plugins.authenticator.AuthenticatorManager
 
 authenticator=./Authenticator
 
+userCache=./UserCache
+
 cookieName=pressdata_user
 
 #cookieDomain=affarsvarlden.se
