--- a/siteconfig/talentum/escenic/plugins/authenticator/AuthenticatorManager.properties
+++ b/siteconfig/talentum/escenic/plugins/authenticator/AuthenticatorManager.properties
@@ -1,9 +1,7 @@
 $class=talentum.escenic.plugins.authenticator.AuthenticatorManager
 
-authenticator=./Authenticator
+# load authenticators to use per publication
+authenticator.affarsvarlden=./AffarsvarldenAuthenticator
+authenticator.arbetarskydd=./ArbetarskyddAuthenticator
 
 userCache=./UserCache
-
-cookieName=pressdata_user
-
-#cookieDomain=affarsvarlden.se
