--- a/siteconfig/talentum/escenic/plugins/authenticator/DefaultAgreement.properties
+++ b/siteconfig/talentum/escenic/plugins/authenticator/DefaultAgreement.properties
@@ -1,4 +1,4 @@
-$class=talentum.escenic.plugins.authenticator.agreements.AFVAgreement
+$class=talentum.escenic.plugins.authenticator.agreements.DefaultAgreement
 
 url.loginform=/administration/users/loginform/
 
