--- a/siteconfig/talentum/escenic/plugins/authenticator/DefaultAgreement.properties
+++ b/siteconfig/talentum/escenic/plugins/authenticator/DefaultAgreement.properties
@@ -8,7 +8,14 @@ url.rejected=/administration/users/rejected/
 
 url.passive=/administration/users/passive/
 
+# It is possible to override locking of articles by stating the section here.
+# If allowPublishedOlderThanDays is set it states how many days the articles of the section is locked.
+# The property allowPublishedBeforeWeekday indicates the publishing weekday of the magazine (allowed values are
+# 1-7, 1=Sunday, 7=Saturday), if set the most recent allowed publishing date is calculated by first
+# rolling back the allowPublishedOlderThanDays and then finding the first day with matching weekday.
+ 
 allowPublishedSection=ece_tidningen
-
-# Which weekday is the magazine published. 1-7, 1=Sunday, 7=Saturday
+allowPublishedBeforeDays=7
 allowPublishedBeforeWeekday=4
+
+
