--- a/siteconfig/talentum/escenic/plugins/authenticator/DefaultAgreement.properties
+++ b/siteconfig/talentum/escenic/plugins/authenticator/DefaultAgreement.properties
@@ -13,9 +13,9 @@ url.passive=/administration/users/passive/
 # The property allowPublishedBeforeWeekday indicates the publishing weekday of the magazine (allowed values are
 # 1-7, 1=Sunday, 7=Saturday), if set the most recent allowed publishing date is calculated by first
 # rolling back the allowPublishedOlderThanDays and then finding the first day with matching weekday.
+# It is also possible to set the time of day.
  
 allowPublishedSection=ece_tidningen
 allowPublishedBeforeDays=7
 allowPublishedBeforeWeekday=3
-
-
+allowPublishedBeforeTime=22:00
