--- a/siteconfig/talentum/escenic/plugins/authenticator/AuthenticatorManager.properties
+++ b/siteconfig/talentum/escenic/plugins/authenticator/AuthenticatorManager.properties
@@ -3,5 +3,6 @@ $class=talentum.escenic.plugins.authenticator.AuthenticatorManager
 # load authenticators to use per publication
 authenticator.affarsvarlden=./AffarsvarldenAuthenticator
 authenticator.arbetarskydd=./ArbetarskyddAuthenticator
+authenticator.talentumhr=./TalentumHRAuthenticator
 
 userCache=./UserCache
