--- a/build.xml
+++ b/build.xml
@@ -19,7 +19,7 @@
 		</fileset>
 	</path>
 
-	<path id="ivy.lib.path" path="${lib.dir}/ivy-2.0.0-beta1.jar"/>
+	<path id="ivy.lib.path" path="buildjars/ivy-2.0.0-beta1.jar"/>
 	<taskdef resource="org/apache/ivy/ant/antlib.xml" uri="antlib:org.apache.ivy.ant" classpathref="ivy.lib.path" />
 
 	<target name="usage">
