--- a/build.xml
+++ b/build.xml
@@ -198,6 +198,8 @@ context-root: /${demo-publication}
 				<include name="${ant.project.name}/**/*" />
 			</fileset>
 		</jar>
+		<delete file="dist/${publication-jar.file}" />
+		<delete file="dist/${jar.file}" />
 		
 		<delete dir="tmp"/>
 	</target>
