--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <project name="authenticator" default="usage" basedir="." xmlns:ivy="antlib:org.apache.ivy.ant">
 
-	<property name="version" value="1.16" />
+	<property name="version" value="1.17b" />
 
 	<property environment="env" />
 	<!-- set webapps.dir if TOMCAT_HOME env variable is set. CruiseControl sends this variable along -->
