--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <project name="authenticator" default="pack" basedir="." xmlns:ivy="antlib:org.apache.ivy.ant">
 
-	<property name="version" value="1.17" />
+	<property name="version" value="1.18" />
 
 	<path id="path:antcontrib" path="buildjars/ant-contrib.jar" />
 	<taskdef resource="net/sf/antcontrib/antcontrib.properties" classpathref="path:antcontrib" />
@@ -155,7 +155,7 @@
 			resolver="local"
 			pubrevision="${version}"
 			status="release"
-			overwrite="true"/>
+			overwrite="false"/>
 	</target>
 
 	<target name="clean" description="Removes generated directories.">
