Changed to PressDataPublisherAuthenticator

--- a/siteconfig/talentum/escenic/plugins/authenticator/DagensmediaAuthenticator.properties
+++ b/siteconfig/talentum/escenic/plugins/authenticator/DagensmediaAuthenticator.properties
@@ -1,6 +1,6 @@
-$class=talentum.escenic.plugins.authenticator.authenticators.PressDataProductAuthenticator
+$class=talentum.escenic.plugins.authenticator.authenticators.PressDataPublisherAuthenticator
 
-product=DMS
+publisher=DMEDIA
 
 cookieName=dagensmedia_user
 
