--- a/siteconfig/talentum/escenic/plugins/authenticator/AuthenticatorManager.properties
+++ b/siteconfig/talentum/escenic/plugins/authenticator/AuthenticatorManager.properties
@@ -4,5 +4,6 @@ $class=talentum.escenic.plugins.authenticator.AuthenticatorManager
 authenticator.affarsvarlden=./AffarsvarldenAuthenticator
 authenticator.arbetarskydd=./ArbetarskyddAuthenticator
 authenticator.talentumhr=./TalentumHRAuthenticator
+authenticator.nyteknik=./NyteknikAuthenticator
 
 userCache=./UserCache
