--- a/resources/plugin.xml
+++ b/resources/plugin.xml
@@ -3,6 +3,7 @@
 	<version>@plugin.version@</version>
 	<core version="4.3" />
 	<core version="5.0" />
+	<core version="5.1" />
 	<requires>
 		<class
 			name="talentum.escenic.plugins.authenticator.AuthenticatorManager"
