--- a/siteconfig/talentum/escenic/plugins/authenticator/TalentumHRAuthenticator.properties
+++ b/siteconfig/talentum/escenic/plugins/authenticator/TalentumHRAuthenticator.properties
@@ -8,4 +8,4 @@ autoLoginCookieName=TalentumUserProfile_autologin
 
 endPoint=http://test.webservices.talentumhr.se/loginaccountservice/loginaccountservice.asmx
 
-myPageURL=http://test.minsida.talentumhr.se/pages/default.aspx
+adminPageURL=http://test.minsida.talentumhr.se/pages/default.aspx
