--- a/resources/plugin.xml
+++ b/resources/plugin.xml
@@ -4,6 +4,7 @@
 	<core version="4.3" />
 	<core version="5.0" />
 	<core version="5.1" />
+	<core version="5.2" />
 	<requires>
 		<class
 			name="talentum.escenic.plugins.authenticator.AuthenticatorManager"
