--- a/.classpath
+++ b/.classpath
@@ -21,5 +21,7 @@
 	<classpathentry kind="lib" path="/opt/tomcat/common/lib/log4j.jar"/>
 	<classpathentry kind="lib" path="/escenic-src/lib/escenic-servlet.jar"/>
 	<classpathentry kind="lib" path="buildjars/java_memcached-release_1.3.2.jar"/>
+	<classpathentry kind="lib" path="buildjars/engine-taglib-5.1-3.jar"/>
+	<classpathentry kind="lib" path="buildjars/log4j.jar"/>
 	<classpathentry kind="output" path="build"/>
 </classpath>
