--- a/.classpath
+++ b/.classpath
@@ -23,5 +23,6 @@
 	<classpathentry kind="lib" path="buildjars/java_memcached-release_1.3.2.jar"/>
 	<classpathentry kind="lib" path="buildjars/engine-taglib-5.1-3.jar"/>
 	<classpathentry kind="lib" path="buildjars/log4j.jar"/>
+	<classpathentry kind="lib" path="buildjars/commons-collections-3.2.jar"/>
 	<classpathentry kind="output" path="build"/>
 </classpath>
