--- a/resources/plugin.xml
+++ b/resources/plugin.xml
@@ -5,6 +5,8 @@
 	<core version="5.0" />
 	<core version="5.1" />
 	<core version="5.2" />
+	<core version="5.3" />
+	<core version="5.4" />
 	<requires>
 		<class
 			name="talentum.escenic.plugins.authenticator.AuthenticatorManager"
