--- a/siteconfig/talentum/escenic/plugins/authenticator/AffarsvarldenAuthenticator.properties
+++ b/siteconfig/talentum/escenic/plugins/authenticator/AffarsvarldenAuthenticator.properties
@@ -2,6 +2,8 @@ $class=talentum.escenic.plugins.authenticator.authenticators.PressDataPublisherA
 
 publisher=AFFVAR
 
+NTUserProduct=AFF
+
 cookieName=affarsvarlden_user
 
 #cookieDomain=affarsvarlden.se
