--- a/siteconfig/talentum/escenic/plugins/authenticator/AffarsvarldenAuthenticator.properties
+++ b/siteconfig/talentum/escenic/plugins/authenticator/AffarsvarldenAuthenticator.properties
@@ -2,7 +2,11 @@ $class=talentum.escenic.plugins.authenticator.authenticators.PressDataPublisherA
 
 publisher=AFFVAR
 
-NTUserProduct=AFF
+# product for registration NTOrder
+product=AFF
+
+# coupon for registration NTOrder
+coupon=1
 
 cookieName=affarsvarlden_user
 
