--- a/build.xml
+++ b/build.xml
@@ -35,7 +35,7 @@
 	</target>
 
 	<target name="compile" depends="init, generate-webservice-clients">
-		<javac debug="on" srcdir="src/java" destdir="build" target="1.5">
+		<javac debug="on" srcdir="src/java" destdir="build">
 			<include name="talentum/**" />
 			<classpath refid="project.class.path" />
 		</javac>
