--- a/resources/plugin.xml
+++ b/resources/plugin.xml
@@ -8,6 +8,8 @@
 	<core version="5.3" />
   <core version="5.4" />
   <core version="5.5" />
+  <core version="5.6" />
+  <core version="5.7" />
 	<requires>
 		<class
 			name="talentum.escenic.plugins.authenticator.AuthenticatorManager"
